Fixed overflow styling problems

--- a/frontend/src/styles/RidePreview.css
+++ b/frontend/src/styles/RidePreview.css
@@ -1,3 +1,8 @@
+.my-rides-container{
+  margin:auto;
+  width: 50vw;
+}
+
 .ride-preview {
     background-color: #f0f0f0;
     padding: 20px;
@@ -5,20 +10,22 @@
     width: 90%;
     height:120px;
     border-radius: 5px;
-    margin-left : 5%
+    margin-left : 5%;
   }
   .ride-list {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 20px;
     width: 100%;
-    max-height: 700px;
-    overflow-y: auto; /* Enable vertical scrolling */
+    height: 100%;
+    /*overflow-y: scroll; /* Enable vertical scrolling */
   }
 
   .ride-list-container {
     flex: 1;
     padding: 20px;
+    overflow-y: scroll;
+
   }
   .ride-item:hover {
     transform: scale(1.01);
